# k-resolver

./: .env.example  .gitignore  CLAUDE.md  Containerfile  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
scripts/: create_migration.sh  init-db.sql  seed_data.py
src/: __init__.py  main.py
src/api/: routes.py  schemas.py
src/core/: config.py  database.py
src/models/: __init__.py  dns.py
src/services/: dns_service.py  isp_service.py
tests/: __init__.py  conftest.py  test_api.py
